<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		login
	 *	@date 		Tuesday 27th of February 2024 06:16:51 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/login" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_login_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__login_ek2"
					android:background="@drawable/_bg__login_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="428dp"
					android:layout_height="926dp" />


				<RelativeLayout android:id="@+id/group_329"
					android:layout_marginTop="97dp"
					android:layout_marginStart="175.2dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__group_329_ek1"
						android:background="@drawable/_bg__group_329_ek1_shape"
						 android:layout_marginStart="-175dp"
						android:layout_marginTop="-97dp"
						android:layout_width="83.6dp"
						android:layout_height="55.8dp" />

					<ImageView android:id="@+id/image_landscape"
						android:src="@drawable/image_landscape"
						android:contentDescription="image_landscape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="83.6dp"
						android:layout_height="55.8dp" />

				</RelativeLayout>

				<TextView android:id="@+id/logo"
					android:textStyle="bold"
					android:textSize="20sp"
					android:textColor="@color/logo_color"
					android:layout_marginLeft="189dp"
					android:layout_marginTop="160dp"
					android:layout_width="75dp"
					android:layout_height="54dp"
					android:text="@string/logo_string"
					 />

				<TextView android:id="@+id/enter_your_username_and_password_to_login"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/logo_color"
					android:layout_marginLeft="75dp"
					android:layout_marginTop="332dp"
					android:layout_width="288dp"
					android:layout_height="61.6dp"
					android:text="@string/enter_your_username_and_password_to_login_string"
					 />

				<TextView android:id="@+id/_forgot_password_"
					android:textSize="16sp"
					android:textColor="@color/logo_color"
					android:layout_marginLeft="238dp"
					android:layout_marginTop="526dp"
					android:layout_width="150.6dp"
					android:layout_height="42.6dp"
					android:text="@string/_forgot_password__string"
					 />

				<TextView android:id="@+id/forgot_username_"
					android:textSize="16sp"
					android:textColor="@color/logo_color"
					android:layout_marginLeft="233dp"
					android:layout_marginTop="449dp"
					android:layout_width="153.6dp"
					android:layout_height="42.6dp"
					android:text="@string/forgot_username__string"
					 />

				<TextView android:id="@+id/_don_t_have_an_account__register"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="@color/logo_color"
					android:layout_marginLeft="99dp"
					android:layout_marginTop="753dp"
					android:layout_width="261.6dp"
					android:layout_height="42.6dp"
					android:text="@string/_don_t_have_an_account__register_string"
					 />

				<TextView android:id="@+id/need_help__visit_our_help_center"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="@color/logo_color"
					android:layout_marginLeft="97dp"
					android:layout_marginTop="837dp"
					android:layout_width="260.6dp"
					android:layout_height="42.6dp"
					android:text="@string/need_help__visit_our_help_center_string"
					 />

				<TextView android:id="@+id/or_login_in_with"
					android:textSize="16sp"
					android:textColor="@color/logo_color"
					android:layout_marginLeft="160dp"
					android:layout_marginTop="637dp"
					android:layout_width="128.6dp"
					android:layout_height="42.6dp"
					android:text="@string/or_login_in_with_string"
					 />

				<ImageView android:id="@+id/path_101"
					android:src="@drawable/path_101"
					android:contentDescription="path_101"
					 android:layout_marginStart="56.2dp"
					android:layout_marginTop="397dp"
					android:layout_width="318.5dp"
					android:layout_height="44.6dp" />

				<ImageView android:id="@+id/path_103"
					android:src="@drawable/path_103"
					android:contentDescription="path_103"
					 android:layout_marginStart="57.2dp"
					android:layout_marginTop="479.7dp"
					android:layout_width="318.5dp"
					android:layout_height="44.6dp" />

				<TextView android:id="@+id/password"
					android:textSize="16sp"
					android:textColor="@color/logo_color"
					android:layout_marginLeft="69dp"
					android:layout_marginTop="493dp"
					android:layout_width="88.6dp"
					android:layout_height="42.6dp"
					android:text="@string/password_string"
					 />

				<ImageView android:id="@+id/rectangle_39"
					android:src="@drawable/rectangle_39"
					android:contentDescription="rectangle_39"
					 android:layout_marginStart="66dp"
					android:layout_marginTop="574dp"
					android:layout_width="309dp"
					android:layout_height="45dp" />

				<TextView android:id="@+id/login_ek3"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="@color/_bg__login_ek2_color"
					android:layout_marginLeft="198dp"
					android:layout_marginTop="587dp"
					android:layout_width="58.6dp"
					android:layout_height="23.6dp"
					android:text="@string/login_ek3_string"
					 />

				<TextView android:id="@+id/username"
					android:textSize="16sp"
					android:textColor="@color/logo_color"
					android:layout_marginLeft="71dp"
					android:layout_marginTop="411dp"
					android:layout_width="92.6dp"
					android:layout_height="42.6dp"
					android:text="@string/username_string"
					 />

				<ImageView android:id="@+id/rectangle_128"
					android:src="@drawable/rectangle_128"
					android:contentDescription="rectangle_128"
					 android:layout_marginStart="64.6dp"
					android:layout_marginTop="679dp"
					android:layout_width="143dp"
					android:layout_height="46dp" />

				<ImageView android:id="@+id/rectangle_129"
					android:src="@drawable/rectangle_129"
					android:contentDescription="rectangle_129"
					 android:layout_marginStart="228.6dp"
					android:layout_marginTop="683dp"
					android:layout_width="143dp"
					android:layout_height="45dp" />

				<ImageView android:id="@+id/google"
					android:src="@drawable/google"
					android:contentDescription="google"
					 android:layout_marginStart="79.9dp"
					android:layout_marginTop="690.8dp"
					android:layout_width="26dp"
					android:layout_height="26.4dp" />

				<TextView android:id="@+id/google_ek1"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="@color/logo_color"
					android:layout_marginLeft="122dp"
					android:layout_marginTop="693dp"
					android:layout_width="70.6dp"
					android:layout_height="23.6dp"
					android:text="@string/google_ek1_string"
					 />

				<TextView android:id="@+id/facebook"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="@color/_bg__login_ek2_color"
					android:layout_marginLeft="282dp"
					android:layout_marginTop="696dp"
					android:layout_width="91.6dp"
					android:layout_height="23.6dp"
					android:text="@string/facebook_string"
					 />

				<ImageView android:id="@+id/facebook_ek1"
					android:src="@drawable/facebook_ek1"
					android:contentDescription="facebook_ek1"
					 android:layout_marginStart="238.4dp"
					android:layout_marginTop="687.4dp"
					android:layout_width="30.6dp"
					android:layout_height="30.4dp" />

				<TextView android:id="@+id/login_ek4"
					android:textStyle="bold"
					android:textSize="30sp"
					android:textColor="@color/logo_color"
					android:layout_marginLeft="179dp"
					android:layout_marginTop="264dp"
					android:layout_width="105dp"
					android:layout_height="81dp"
					android:text="@string/login_ek4_string"
					 />

				<ImageView android:id="@+id/rectangle_129_ek1"
					android:src="@drawable/rectangle_129_ek1"
					android:contentDescription="rectangle_129_ek1"
					 android:layout_marginStart="5146dp"
					android:layout_marginTop="2988dp"
					android:layout_width="317dp"
					android:layout_height="45dp" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>